Fix resulting errors