@@ -30,11 +30,11 @@ public class MusicPlayerManager {
 	
 	private static void generatePlayer() {
 		try {
-			Class<?> clazz = Class.forName("info.u_team.music_player.lavaplayer.MusicPlayer", true, DependencyManager.getClassLoader());
+			Class<?> clazz = Class.forName("info.u_team.music_player.lavaplayer.MusicPlayer", true, DependencyManager.MUSICPLAYER_CLASSLOADER);
 			if (!IMusicPlayer.class.isAssignableFrom(clazz)) {
 				throw new IllegalAccessError("The class " + clazz + " does not implement IMusicPlayer! This should not happen?!");
 			}
-			player = (IMusicPlayer) clazz.newInstance();
+			player = (IMusicPlayer) clazz.getConstructor().newInstance();
 			logger.info("Successfully created music player instance");
 		} catch (Exception ex) {
 			logger.fatal("Cannot create music player instance. This is a serious bug and the mod will not work. Report to the mod authors", ex);
